# eastest

./: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
.github/: run_pytest.yml
.github/workflows/: run_pytest.yml
.streamlit/: config.toml
src/: app.py
src/__test__/: test_data.py  test_generate_text.py
src/models/: model.py
src/settings/: page_config.py
src/utils/: blank_line.py  check_inputs.py  copy_to_clipboard.py  generate_text.py
